--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.CEIgbQwn.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.8-kCzrzY.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.BuvRwvzi.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.mnsteiQR.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.l9w6VLJ9.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler._Ky25MOR.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.sBxf4tAR.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DQBsg44U.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BoVv8Kih.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/0.DETW-ha6.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.B37qyHU5.js">
@@ -19,9 +19,8 @@
 			
 			<script>
 				{
-					__sveltekit_1hgyek5 = {
-						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/CV"
+					__sveltekit_17yz5fe = {
+						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
@@ -29,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.8-kCzrzY.js"),
-						import("./app/immutable/entry/app.sBxf4tAR.js")
+						import("./app/immutable/entry/start.mnsteiQR.js"),
+						import("./app/immutable/entry/app.DQBsg44U.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
