--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.CEIgbQwn.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.mnsteiQR.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.l9w6VLJ9.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.Ck_kNlGN.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.AWDyjdT5.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler._Ky25MOR.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.DQBsg44U.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.DY1F2je6.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BoVv8Kih.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/0.DETW-ha6.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.B37qyHU5.js">
@@ -19,7 +19,7 @@
 			
 			<script>
 				{
-					__sveltekit_17yz5fe = {
+					__sveltekit_1su0w0h = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.mnsteiQR.js"),
-						import("./app/immutable/entry/app.DQBsg44U.js")
+						import("./app/immutable/entry/start.Ck_kNlGN.js"),
+						import("./app/immutable/entry/app.DY1F2je6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
