--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
 		<link href="./app/immutable/assets/0.DnmuK9d7.css" rel="stylesheet">
-		<link rel="modulepreload" href="./app/immutable/entry/start.D-8ij5gi.js">
-		<link rel="modulepreload" href="./app/immutable/chunks/entry.CWPXxdae.js">
+		<link rel="modulepreload" href="./app/immutable/entry/start.C9oI3Wwl.js">
+		<link rel="modulepreload" href="./app/immutable/chunks/entry.DweZtWme.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/scheduler._Ky25MOR.js">
-		<link rel="modulepreload" href="./app/immutable/entry/app.BBuwQ7Ko.js">
+		<link rel="modulepreload" href="./app/immutable/entry/app.BR4Ulgfp.js">
 		<link rel="modulepreload" href="./app/immutable/chunks/index.BoVv8Kih.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/0.CJiVHAiy.js">
 		<link rel="modulepreload" href="./app/immutable/nodes/2.CpScf_7L.js">
@@ -19,7 +19,7 @@
 			
 			<script>
 				{
-					__sveltekit_1t5q4d8 = {
+					__sveltekit_bq5zcm = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -28,8 +28,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./app/immutable/entry/start.D-8ij5gi.js"),
-						import("./app/immutable/entry/app.BBuwQ7Ko.js")
+						import("./app/immutable/entry/start.C9oI3Wwl.js"),
+						import("./app/immutable/entry/app.BR4Ulgfp.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
